// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObsGridItem for an observation with a photo should render 1`] = `
<View
  style={
    [
      [
        {
          "maxHeight": 210,
        },
        {
          "overflow": "hidden",
        },
        {
          "position": "relative",
        },
        {
          "borderBottomLeftRadius": 15,
          "borderBottomRightRadius": 15,
          "borderTopLeftRadius": 15,
          "borderTopRightRadius": 15,
        },
        {
          "width": 200,
        },
        {
          "width": 200,
        },
      ],
    ]
  }
  testID="MyObservations.gridItem.00000000-0000-0000-0000-000000000000"
>
  <View
    style={
      [
        [
          {
            "flexGrow": 1,
          },
          {
            "aspectRatio": 1,
          },
          {
            "position": "relative",
          },
        ],
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "position": "absolute",
            },
            {
              "width": "100%",
            },
            {
              "height": "100%",
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            [
              {
                "flexGrow": 1,
              },
              {
                "aspectRatio": 1,
              },
              {
                "maxHeight": 210,
              },
              {
                "overflow": "hidden",
              },
              {
                "position": "relative",
              },
              {
                "borderBottomLeftRadius": 15,
                "borderBottomRightRadius": 15,
                "borderTopLeftRadius": 15,
                "borderTopRightRadius": 15,
              },
              {
                "width": 200,
              },
              {
                "width": 200,
              },
              {
                "backgroundColor": "#454545",
              },
              {
                "flexShrink": 1,
              },
              {
                "justifyContent": "center",
              },
              {
                "alignItems": "center",
              },
              {
                "backgroundColor": "#454545",
              },
            ],
          ]
        }
        testID="IconicTaxonName.iconicTaxonIcon"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#BFBFBF33",
                "fontSize": 100,
              },
              undefined,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <Image
      accessibilityIgnoresInvertColors={true}
      source={
        {
          "uri": "https://inaturalist-open-data.s3.amazonaws.com/photos/1/large.jpeg",
        }
      }
      style={
        [
          [
            {
              "flexGrow": 1,
            },
            {
              "aspectRatio": 1,
            },
          ],
        ]
      }
      testID="ObsList.photo"
    />
  </View>
  <BVLinearGradient
    colors={
      [
        0,
        2147483648,
      ]
    }
    endPoint={
      {
        "x": 0,
        "y": 0.75,
      }
    }
    locations={null}
    startPoint={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      [
        [
          {
            "position": "absolute",
          },
          {
            "width": "100%",
          },
          {
            "height": "100%",
          },
        ],
      ]
    }
  />
  <View
    style={
      [
        [
          {
            "position": "absolute",
          },
          {
            "bottom": 0,
          },
          {
            "display": "flex",
          },
          {
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          },
          {
            "width": "100%",
          },
        ],
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "flexDirection": "row",
            },
            {
              "marginBottom": 4,
            },
          ],
        ]
      }
      testID="ObsStatus.00000000-0000-0000-0000-000000000000"
    >
      <View
        accessibilityLabel="0 identifications"
        accessible={true}
        style={
          [
            [
              {
                "flexDirection": "row",
              },
              {
                "alignItems": "center",
              },
              {
                "marginRight": 8,
              },
            ],
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 14,
              },
              undefined,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#454545",
              },
              {
                "fontFamily": "Lato-Medium",
              },
              [
                {
                  "marginLeft": 6,
                },
                {
                  "color": "#ffffff",
                },
              ],
            ]
          }
        >
          0
        </Text>
      </View>
      <View
        accessibilityLabel="0 comments"
        accessible={true}
        style={
          [
            [
              {
                "flexDirection": "row",
              },
              {
                "alignItems": "center",
              },
              {
                "marginRight": 8,
              },
            ],
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 14,
              },
              undefined,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#454545",
              },
              {
                "fontFamily": "Lato-Medium",
              },
              [
                {
                  "marginLeft": 6,
                },
                {
                  "color": "#ffffff",
                },
              ],
            ]
          }
          testID="ObsStatus.commentsCount"
        >
          0
        </Text>
      </View>
      <View>
        <SvgMock
          accessibilityLabel="Quality Grade Casual"
          accessible={true}
          color="rgba(255, 255, 255, 1)"
          opacity={1}
          testID="QualityGrade.casual"
        />
      </View>
    </View>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 17,
            "lineHeight": 20.4,
          },
          {
            "color": "#454545",
          },
          {
            "fontFamily": "Lato-Medium",
          },
          [
            {
              "color": "#ffffff",
            },
          ],
        ]
      }
    >
      Unknown
    </Text>
  </View>
</View>
`;

exports[`ObsGridItem for an observation without a photo should render 1`] = `
<View
  style={
    [
      [
        {
          "maxHeight": 210,
        },
        {
          "overflow": "hidden",
        },
        {
          "position": "relative",
        },
        {
          "borderBottomLeftRadius": 15,
          "borderBottomRightRadius": 15,
          "borderTopLeftRadius": 15,
          "borderTopRightRadius": 15,
        },
        {
          "width": 200,
        },
        {
          "width": 200,
        },
      ],
    ]
  }
  testID="MyObservations.gridItem.00000000-0000-0000-0000-000000000000"
>
  <View
    style={
      [
        [
          {
            "flexGrow": 1,
          },
          {
            "aspectRatio": 1,
          },
          {
            "position": "relative",
          },
        ],
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "position": "absolute",
            },
            {
              "width": "100%",
            },
            {
              "height": "100%",
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            [
              {
                "flexGrow": 1,
              },
              {
                "aspectRatio": 1,
              },
              {
                "maxHeight": 210,
              },
              {
                "overflow": "hidden",
              },
              {
                "position": "relative",
              },
              {
                "borderBottomLeftRadius": 15,
                "borderBottomRightRadius": 15,
                "borderTopLeftRadius": 15,
                "borderTopRightRadius": 15,
              },
              {
                "width": 200,
              },
              {
                "width": 200,
              },
              {
                "backgroundColor": "#454545",
              },
              {
                "flexShrink": 1,
              },
              {
                "justifyContent": "center",
              },
              {
                "alignItems": "center",
              },
              {
                "backgroundColor": "#454545",
              },
            ],
          ]
        }
        testID="IconicTaxonName.iconicTaxonIcon"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#BFBFBF33",
                "fontSize": 100,
              },
              undefined,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <Image
      accessibilityIgnoresInvertColors={true}
      source={
        {
          "uri": "document/directory/path/photoUploads/undefined",
        }
      }
      style={
        [
          [
            {
              "flexGrow": 1,
            },
            {
              "aspectRatio": 1,
            },
          ],
        ]
      }
      testID="ObsList.photo"
    />
  </View>
  <BVLinearGradient
    colors={
      [
        0,
        2147483648,
      ]
    }
    endPoint={
      {
        "x": 0,
        "y": 0.75,
      }
    }
    locations={null}
    startPoint={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      [
        [
          {
            "position": "absolute",
          },
          {
            "width": "100%",
          },
          {
            "height": "100%",
          },
        ],
      ]
    }
  />
  <View
    style={
      [
        [
          {
            "position": "absolute",
          },
          {
            "bottom": 0,
          },
          {
            "display": "flex",
          },
          {
            "paddingBottom": 8,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 8,
          },
          {
            "width": "100%",
          },
        ],
      ]
    }
  >
    <View
      style={
        [
          [
            {
              "flexDirection": "row",
            },
            {
              "marginBottom": 4,
            },
          ],
        ]
      }
      testID="ObsStatus.00000000-0000-0000-0000-000000000000"
    >
      <View
        accessibilityLabel="0 identifications"
        accessible={true}
        style={
          [
            [
              {
                "flexDirection": "row",
              },
              {
                "alignItems": "center",
              },
              {
                "marginRight": 8,
              },
            ],
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 14,
              },
              undefined,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#454545",
              },
              {
                "fontFamily": "Lato-Medium",
              },
              [
                {
                  "marginLeft": 6,
                },
                {
                  "color": "#ffffff",
                },
              ],
            ]
          }
        >
          0
        </Text>
      </View>
      <View
        accessibilityLabel="0 comments"
        accessible={true}
        style={
          [
            [
              {
                "flexDirection": "row",
              },
              {
                "alignItems": "center",
              },
              {
                "marginRight": 8,
              },
            ],
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 14,
              },
              undefined,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 13,
                "lineHeight": 18,
              },
              {
                "color": "#454545",
              },
              {
                "fontFamily": "Lato-Medium",
              },
              [
                {
                  "marginLeft": 6,
                },
                {
                  "color": "#ffffff",
                },
              ],
            ]
          }
          testID="ObsStatus.commentsCount"
        >
          0
        </Text>
      </View>
      <View>
        <SvgMock
          accessibilityLabel="Quality Grade Casual"
          accessible={true}
          color="rgba(255, 255, 255, 1)"
          opacity={1}
          testID="QualityGrade.casual"
        />
      </View>
    </View>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontSize": 17,
            "lineHeight": 20.4,
          },
          {
            "color": "#454545",
          },
          {
            "fontFamily": "Lato-Medium",
          },
          [
            {
              "color": "#ffffff",
            },
          ],
        ]
      }
    >
      Unknown
    </Text>
  </View>
</View>
`;
